Update Introduction and Data for Greenville SC.ipynb

--- a/Introduction and Data for Greenville SC.ipynb
+++ b/Introduction and Data for Greenville SC.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## Introduction to the Problem \n",
-    "#### Due to covid-19, big cities are experiencing a mass exodus. Some of these people are fleeing to their city's surrounding Subarbs, while others seek an entirely new region. For this project, we are going to target Greenville, SC and its surrounding subarbs as our destination. Greenville is a rapidly growing mid size city in the upstate region of South Carolina and for a small city, it has a diverse economy with plenty to do. The goal will be to analyze each area's access to dining, groceries, business and entertainment by using Foursquare's API. "
+    "#### Due to covid-19, big cities are experiencing a mass exodus. Some of these people are fleeing to their city's surrounding Suburbs, while others seek an entirely new region. For this project, we are going to target Greenville, SC and its surrounding suburbs as our destination. Greenville is a rapidly growing mid size city in the upstate region of South Carolina and for a small city, it has a diverse economy with plenty to do. The goal will be to analyze each area's access to dining, groceries, business and entertainment by using Foursquare's API. "
    ]
   },
   {
